# Map

./: .gitignore  Docker db.session.sql  Dockerfile  Makefile  README.md  app.py  compose.yml  launch.py  manage.py  pyproject.toml  regex.txt  requirements.txt
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
init_db/: 01_create_tables.sql
problems/: problems.txt  solutions.sql  university_DDL.sql
service/: __init__.py  app.py  classes.py  health.py  routes.py  runtime.py  utils.py
service/common/: __init__.py  cli_commands.py  error_handler.py  log_handlers.py
service/models/: __init__.py  location.py  location_details.py  persistent_base.py  user.py  users_locations.py
service/static/: style.css
service/templates/: add_location.html  home.html  home_nav.html  index.html  index_nav.html  login.html  signup.html  view_location.html
service/templates/layout/: home_nav.html  index_nav.html
templates/: add_location.html  home.html  index.html  login.html  signup.html
