[tool.poetry]
name = "map"
version = "0.1.0"
description = "A place to store the location of your friends"
authors = ["Weston Gorczyca <weston.gorczyca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
waitress = "^3.0.0"
python-dotenv = "^1.0.1"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
